# trein

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: ci.yml
src/: cli.rs  clipboard.rs  config.rs  main.rs  ocr.rs  output.rs  tesseract.rs  translate.rs  wayland.rs
